--- a/games/fantasyrealm/index.html
+++ b/games/fantasyrealm/index.html
@@ -10,6 +10,11 @@
   </style>
 </head>
 <body>
+<body>
+    <canvas id="gameCanvas"></canvas>
+    <script src="level1.js"></script> <script src="game.js"></script>
+</body>
+  
 <script>
 const config = {
   type: Phaser.AUTO,
