--- a/index.html
+++ b/index.html
@@ -281,19 +281,15 @@
             <span class="mdl-layout-title">Navegação</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="artigos.html">Artigos</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="artigosdesaudementalgerados.html">Artigos Automáticos de Ensaio</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="imagens.html">Imagens</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./cw22.html">Client WZZM</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="contato.html">Contato</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./buscaavancada/index.html">Busca Avançada</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="ferramentasuteis.html">Ferramentas Úteis</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/">Página do Usuário</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./useradmin/denunciar/">Rastrear usuário / Denunciar</a>
-                <a class="mdl-navigation__link" href="https://wikizero.wzzm.org/">Transparência</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="servicoswzzm.html">Outros serviços da Wiki Zone Zero Mod</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="forum.html">Fórum</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="visualizarnoticias.html">Visualizar Noticias</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="./games/" data-requires-auth="false">Jogos Gratuitos</a>
+
+                <a class="mdl-navigation__link" href="http://www.wzzm.org/POL%C3%8DTICAS%20GERAIS%20DO%20WIKI%20ZONE%20ZERO%20MOD.pdf" target="_blank">Políticas da WZZM</a>
+                <a class="mdl-navigation__link" href="#" data-page-src="cadastro-aplicativo.html" data-requires-auth="true">
+                    <i class="material-icons">developer_mode</i> Cadastrar Aplicativo
+                </a>
+                <a class="mdl-navigation__link" href="#" data-page-src="meus-aplicativos.html" data-requires-auth="true">
+                    <i class="material-icons">apps</i> Meus Aplicativos
+                </a>
             </nav>
         </div>
         <main class="mdl-layout__content">
