--- a/games/pacpedia/index.html
+++ b/games/pacpedia/index.html
@@ -1,21 +1,272 @@
-<!-- HUD de Menu Inicial -->
-<div id="main-menu">
-    <button onclick="startGame()" id="start-button">Iniciar Jogo</button>
-    <details>
-        <summary style="font-size:1.2em;margin-top:10px;">Configurações ></summary>
-        <label>Dificuldade:
-            <select id="difficulty-select">
-                <option value="easy">Fácil</option>
-                <option value="medium" selected>Média</option>
-                <option value="hard">Difícil</option>
-            </select>
-        </label>
-        <br><br>
-        <button onclick="resetHighScores()">Apagar Recordes</button>
-        <br><br>
-        <label>Iframe HTML para embutir:</label>
-        <textarea readonly style="width:100%;height:60px;background:#111;color:#0f0;font-family:monospace;">
-<iframe src="https://seusite.com/pacpedia.html" width="600" height="500"></iframe>
-        </textarea>
-    </details>
-</div>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Pacpédia contra os moderadores Wiki</title>
+    <style>
+        body {
+            background-color: #222;
+            color: #eee;
+            font-family: 'Courier New', monospace;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        :root {
+            --wall-color: #050;
+            --path-color: #1a1a1a;
+            --game-border-color: #0f0;
+        }
+
+        #game-info {
+            display: flex;
+            justify-content: space-between;
+            width: 90%;
+            max-width: 600px;
+            margin-top: 10px;
+            font-size: 1.2em;
+            color: #0f0;
+        }
+
+        #game-area {
+            display: flex;
+            gap: 20px;
+            align-items: flex-start;
+            margin-top: 20px;
+        }
+
+        #game-container {
+            border: 2px solid var(--game-border-color);
+            background-color: #333;
+            padding: 10px;
+            display: grid;
+            position: relative;
+            box-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+        }
+
+        .cell {
+            width: 30px;
+            height: 30px;
+            box-sizing: border-box;
+        }
+
+        .wall {
+            background-color: var(--wall-color);
+            border: 1px solid var(--game-border-color);
+        }
+
+        .path {
+            background-color: var(--path-color);
+        }
+
+        .player {
+            background-image: url('wazzimagiygg.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            border: 2px solid #fff;
+            border-radius: 5px;
+            position: absolute;
+            width: 26px;
+            height: 26px;
+            transition: left 0.1s linear, top 0.1s linear;
+            z-index: 10;
+        }
+
+        .dot {
+            background-color: #fff;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            position: absolute;
+            z-index: 5;
+        }
+
+        .power-pellet {
+            background-color: #00f;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            position: absolute;
+            z-index: 6;
+        }
+
+        .ghost {
+            background-image: url('chronus.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            border: 2px solid #fff;
+            border-radius: 50%;
+            position: absolute;
+            width: 26px;
+            height: 26px;
+            transition: left 0.2s linear, top 0.2s linear;
+            z-index: 8;
+        }
+
+        .ghost.scared {
+            filter: brightness(1.5) saturate(0.5);
+            animation: flashScared 0.8s infinite alternate;
+        }
+
+        @keyframes flashScared {
+            from { opacity: 1; }
+            to { opacity: 0.5; }
+        }
+
+        #score-display, #lives-display, #message-display {
+            font-size: 1.2em;
+            color: #0f0;
+            text-align: center;
+        }
+
+        #message-display {
+            margin-top: 10px;
+        }
+
+        button {
+            margin-top: 15px;
+            padding: 10px 20px;
+            font-size: 1em;
+            background-color: #0a0;
+            color: #eee;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #070;
+        }
+
+        #name-input-container {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        #player-name-input {
+            padding: 8px;
+            font-size: 1.2em;
+            width: 200px;
+            margin-bottom: 10px;
+            background-color: #444;
+            color: #eee;
+            border: 1px solid #0f0;
+            border-radius: 3px;
+        }
+
+        #high-scores-container {
+            background-color: #333;
+            border: 2px solid #0f0;
+            padding: 15px;
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.4);
+            border-radius: 8px;
+            width: 250px;
+        }
+
+        #high-scores-container h2 {
+            color: #0f0;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        #high-scores-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        #high-scores-list li {
+            padding: 5px 0;
+            border-bottom: 1px dashed #444;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        #main-menu {
+            margin-top: 30px;
+            background-color: #111;
+            border: 1px solid #0f0;
+            padding: 15px;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 500px;
+        }
+
+        #main-menu summary {
+            cursor: pointer;
+            color: #0f0;
+        }
+
+        #main-menu textarea {
+            font-family: monospace;
+            background-color: #000;
+            color: #0f0;
+            border: 1px solid #0f0;
+            padding: 5px;
+            margin-top: 10px;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <h1>Pacpédia contra os moderadores Wiki</h1>
+
+    <div id="game-info">
+        <div id="score-display">Pontos: 0</div>
+        <div id="lives-display">Vidas: ❤️ ❤️ ❤️</div>
+    </div>
+
+    <div id="game-area">
+        <div id="game-container"></div>
+
+        <div id="high-scores-container">
+            <h2>Recordes</h2>
+            <ul id="high-scores-list"></ul>
+            <button onclick="resetHighScores()">Resetar Recordes</button>
+        </div>
+    </div>
+
+    <div id="message-display">Use as setas do teclado para mover. Clique em "Iniciar Jogo" para começar!</div>
+
+    <!-- Nome para recorde -->
+    <div id="name-input-container">
+        <p>Parabéns! Você fez um novo recorde!</p>
+        <input type="text" id="player-name-input" placeholder="Seu nome">
+        <button id="name-input-button">Salvar Recorde</button>
+    </div>
+
+    <!-- Menu Inicial -->
+    <div id="main-menu">
+        <button onclick="startGame()">Iniciar Jogo</button>
+        <details>
+            <summary>Configurações ></summary>
+            <label>Dificuldade:
+                <select id="difficulty-select">
+                    <option value="easy">Fácil</option>
+                    <option value="medium" selected>Média</option>
+                    <option value="hard">Difícil</option>
+                </select>
+            </label>
+            <br><br>
+            <button onclick="resetHighScores()">Apagar Recordes</button>
+            <br><br>
+            <label>Adicione o jogo ao seu site:</label>
+            <textarea readonly><iframe src="https://seudominio.com/pacpedia.html" width="600" height="500"></iframe></textarea>
+        </details>
+    </div>
+
+    <button id="developer-button">Desenvolvedor: Invencível</button>
+
+    <!-- Script do jogo -->
+    <script src="script.js"></script>
+</body>
+</html>
