--- a/index.html
+++ b/index.html
@@ -282,8 +282,9 @@
             <nav class="mdl-navigation">
 
 
-                <a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Inicio</a>
-                <a class="mdl-navigation__link" href="#" data-page-src="./games/" data-requires-auth="false">Jogos Gratuitos</a>
+<a class="mdl-navigation__link" href="#" data-page-src="recepcao.html" data-requires-auth="false">Página Início</a>
+<a class="mdl-navigation__link" href="#" data-page-src="./games/" data-requires-auth="false">Jogos Gratuitos</a>
+
             </nav>
         </div>
         <main class="mdl-layout__content">
