--- a/games/fantasyrealm/index.html
+++ b/games/fantasyrealm/index.html
@@ -2,220 +2,15 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Fantasy Realm</title>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
-  <style>
-    body { margin: 0; background: #000; }
-    canvas { display: block; margin: auto; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jogo de Corrida Vertical</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<script>
-const config = {
-  type: Phaser.AUTO,
-  width: 800,
-  height: 480,
-  physics: {
-    default: 'arcade',
-    arcade: {
-      gravity: { y: 1200 },
-      debug: false
-    }
-  },
-  scene: { preload, create, update }
-};
-
-const game = new Phaser.Game(config);
-
-let player, cursors, platforms, enemies;
-let background, scoreText, timerText, startButton, restartButton, gameOverText;
-let gameIsOver = false;
-let gameStarted = false;
-let startTime = 0;
-let score = 0;
-let currentLevel = 1;
-
-function preload() {
-  this.load.image('forest', 'forest.jpg');
-  this.load.image('platform', 'platform.jpg');
-  this.load.image('enemyGround', 'enemiesgo.jpg');
-  this.load.image('enemyFly', 'wikimigos.jpg');
-  this.load.image('player', 'wazzimagiygg.jpg');
-}
-
-function create() {
-  background = this.add.tileSprite(0, 0, config.width, config.height, 'forest')
-    .setOrigin(0).setScrollFactor(0);
-
-  if (player && platforms) {
-  this.physics.add.collider(player, platforms);
-  }
-
-  platforms = this.physics.add.staticGroup();
-  enemies = this.physics.add.group();
-
-  // HUD
-  timerText = this.add.text(10, 10, 'Tempo: 0s', { font: '20px Arial', fill: '#fff' }).setScrollFactor(0).setVisible(false);
-  scoreText = this.add.text(10, 40, 'Pontuação: 0', { font: '20px Arial', fill: '#fff' }).setScrollFactor(0).setVisible(false);
-  gameOverText = this.add.text(400, 200, 'GAME OVER', { font: '40px Arial', fill: '#f00' }).setOrigin(0.5).setScrollFactor(0).setVisible(false);
-
-  // Botões
-  startButton = this.add.text(400, 240, '▶ INICIAR JOGO', {
-    font: '30px Arial', fill: '#0f0', backgroundColor: '#000'
-  }).setOrigin(0.5).setScrollFactor(0).setInteractive();
-
-  startButton.on('pointerdown', () => {
-    startButton.setVisible(false);
-    startGame.call(this);
-  });
-
-  restartButton = this.add.text(400, 280, '🔁 REINICIAR', {
-    font: '24px Arial', fill: '#fff', backgroundColor: '#333'
-  }).setOrigin(0.5).setScrollFactor(0).setInteractive().setVisible(false);
-
-  restartButton.on('pointerdown', () => {
-    this.scene.restart();
-  });
-
-  cursors = this.input.keyboard.createCursorKeys();
-}
-
-function startGame() {
-  gameStarted = true;
-  gameIsOver = false;
-  startTime = this.time.now;
-  score = 0;
-
-  if (currentLevel === 1) {
-    setupLevel1(this);
-  } else if (currentLevel === 2) {
-    setupLevel2(this);
-  }
-
-  timerText.setVisible(true);
-  scoreText.setVisible(true);
-}
-
-function setupLevel1(scene) {
-  platforms = scene.physics.add.staticGroup();
-  enemies = scene.physics.add.group();
-
-  // Solo contínuo
-  for (let x = 0; x < 2000; x += 64) {
-    platforms.create(x, 400, null).setOrigin(0).setDisplaySize(64, 20).refreshBody();
-    scene.add.image(x, 400, 'platform').setOrigin(0).setDisplaySize(64, 20);
-  }
-
-  // Blocos suspensos
-  const blocks = [
-    { x: 300, y: 320 }, { x: 364, y: 320 }, { x: 428, y: 320 },
-    { x: 800, y: 280 }, { x: 864, y: 280 }
-  ];
-  blocks.forEach(({ x, y }) => {
-    platforms.create(x, y, null).setOrigin(0).setDisplaySize(64, 20).refreshBody();
-    scene.add.image(x, y, 'platform').setOrigin(0).setDisplaySize(64, 20);
-  });
-
-  // Inimigos
-  spawnEnemy(scene, 500, 368, 'ground');
-  spawnEnemy(scene, 700, 368, 'ground');
-
-  // Bandeira (fim da fase)
-  scene.add.rectangle(1950, 368, 10, 64, 0xffffff).setOrigin(0);
-  const endZone = scene.physics.add.staticImage(1950, 368, null)
-    .setDisplaySize(10, 64).setVisible(false);
-  scene.physics.add.overlap(player, endZone, () => {
-    currentLevel = 2;
-    scene.scene.restart();
-  });
-
-  // Jogador
-  player = scene.physics.add.sprite(100, 368, 'player')
-    .setOrigin(0).setDisplaySize(32, 32).setBounce(0.1).setCollideWorldBounds(false);
-
-  scene.physics.add.collider(player, platforms);
-  scene.physics.add.collider(enemies, platforms);
-  scene.physics.add.overlap(player, enemies, () => {
-    if (!gameIsOver) gameOver(scene);
-  });
-}
-
-function setupLevel2(scene) {
-platforms = scene.physics.add.staticGroup();
-enemies = scene.physics.add.group();
-  scene.physics.add.collider(player, platforms);
-scene.physics.add.collider(enemies, platforms);
-
-  player = scene.physics.add.sprite(100, 200, 'player')
-    .setOrigin(0).setDisplaySize(32, 32).setBounce(0.1).setCollideWorldBounds(false);
-
-  scene.add.text(400, 200, 'FASE 2 EM CONSTRUÇÃO...', {
-    font: '30px Arial', fill: '#ffff00'
-  }).setOrigin(0.5).setScrollFactor(0);
-
-  scene.add.text(400, 260, 'Pressione R para voltar à Fase 1', {
-    font: '20px Arial', fill: '#fff'
-  }).setOrigin(0.5).setScrollFactor(0);
-
-  scene.input.keyboard.on('keydown-R', () => {
-    currentLevel = 1;
-    scene.scene.restart();
-  });
-
-  scene.physics.add.collider(player, platforms);
-}
-
-function spawnEnemy(scene, x, y, type) {
-  if (type === 'ground') {
-    const enemy = enemies.create(x, y, 'enemyGround')
-      .setDisplaySize(32, 32)
-      .setBounce(1)
-      .setCollideWorldBounds(false)
-      .setVelocityX(Phaser.Math.Between(-50, 50));
-    enemy.body.allowGravity = true;
-  } else {
-    const enemy = enemies.create(x, y, 'enemyFly')
-      .setDisplaySize(32, 32)
-      .setBounce(1)
-      .setCollideWorldBounds(false)
-      .setVelocityX(Phaser.Math.Between(-100, 100))
-      .setVelocityY(Phaser.Math.Between(-20, 20));
-    enemy.body.allowGravity = false;
-  }
-}
-
-function update() {
-  if (!gameStarted || gameIsOver) return;
-
-  const speed = 160;
-  const jumpPower = -1040; // salto maior
-
-  player.body.setVelocityX(0);
-
-  if (cursors.left.isDown) player.setVelocityX(-speed);
-  else if (cursors.right.isDown) player.setVelocityX(speed);
-
-  if (cursors.up.isDown && player.body.blocked.down) player.setVelocityY(jumpPower);
-
-  this.cameras.main.scrollX = player.x - 200;
-  background.tilePositionX = this.cameras.main.scrollX * 0.5;
-
-  const elapsed = Math.floor((this.time.now - startTime) / 1000);
-  timerText.setText('Tempo: ' + elapsed + 's');
-
-  score = Math.max(score, Math.floor(player.x / 10));
-  scoreText.setText('Pontuação: ' + score);
-
-  if (player.y > 500) gameOver(this);
-}
-
-function gameOver(scene) {
-  gameIsOver = true;
-  player.setTint(0xff0000);
-  player.body.enable = false;
-  gameOverText.setVisible(true);
-  restartButton.setVisible(true);
-}
-</script>
+  <div class="game-area" id="gameArea">
+    <div class="player" id="player"></div>
+    <div class="score" id="score">Pontuação: 0</div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
