--- a/games/index.html
+++ b/games/index.html
@@ -118,6 +118,14 @@
                 imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
                 status: "Em Desenvolvimento",
                 versao: "0.1.2"
+            },
+            {
+                nome: "Radio Terror",
+                descricao: "Manipule a maquina de radioterapia temida da Therac-25, mas tenha paciencia para isso",
+                path: "./terror25/",
+                imageUrl: "https://i.imgur.com/your-fantasyrealm-cover.png", // Substitua
+                status: "Em Desenvolvimento",
+                versao: "0.1.2"
             }
             // Adicione mais jogos aqui seguindo o mesmo formato
         ];
